# flakectl

./: .gitignore  README.md  action.yml  cleanup.sh  pyproject.toml
.github/workflows/: ci.yml  test.yml  weekly-flightctl.yml
docs/: USER_GUIDE.md
src/flakectl/: __init__.py  __main__.py  agentlog.py  classify.py  cli.py  constants.py  correlate.py  extract.py  fetch.py  github.py  progress.py  progressfile.py  stats.py  tools.py
src/flakectl/prompts/: classifier.py  correlator.py
tests/: conftest.py  test_classify.py  test_cli.py  test_correlate.py  test_extract.py  test_fetch.py  test_github.py  test_progress.py  test_stats.py  test_tools.py
