[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flakectl"
version = "0.1.0"
description = "CI failure classifier -- categorizes flaky tests, infra flakes, and real bugs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "PyGithub>=2.0",
    "requests>=2.28",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Repository = "https://github.com/sk-ilya/flakectl"

[project.scripts]
flakectl = "flakectl.cli:main"
