[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flakectl"
version = "0.1.0"
description = "CI failure classifier -- categorizes flaky tests, infra flakes, and real bugs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "PyGithub>=2.0",
    "requests>=2.28",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.11"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/flakectl/prompts/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Repository = "https://github.com/sk-ilya/flakectl"

[project.scripts]
flakectl = "flakectl.cli:main"
